# llm_bot

./: .env.example  alembic.ini  compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_03_14_0301-5bd1bb7461d9_add_intro_shown_to_users_table.py  2025_03_30_1948-5d83ca9562cf_edit_users_table.py  2025_03_31_0022-64184513b8b3_edit_users_table_more.py  2025_04_15_1719-e5a7e47bbdcd_add_limits_table.py  2025_04_16_1425-c2f751fd2b7a_add_action_count.py  2025_04_18_0347-10de21004477_remove_question_fields.py  2025_04_22_1516-838239a16b8d_initial_migration.py  2025_05_01_2100-94dd16ebce46_edit_user_counters_table.py  2025_05_05_2039-bb1aaeb0fb1c_change_period_started_at_to_timestamptz.py  2025_05_22_1406-699696ca56e9_add_user_payment_method.py  2025_05_25_0032-394caaf6b66d_add_source.py  2025_06_25_2325-11701b1cff60_add_payments_table.py  2025_07_06_0417-cc14b3140121_add_sub_duration.py  2025_07_12_1845-870a627640e6_add_payment_type.py  305aa287a264_add_ai_tread_to_users_table.py  4debf466729a_add_area_field.py  9edd1c380f14_initial_migration.py  a7901916a6ff_change_budget_field_type.py  ca13d5b6e156_change_users_table.py  f90b5b4482da_add_indoor_room_field.py
src/: main.py
src/bot/: ai_client.py  config.py  main.py
src/bot/controllers/: base.py  bot.py  gpt.py  payments.py  user.py  voice.py
src/bot/data/: prompt.md
src/bot/handlers/: ai.py  base.py  command.py  errors.py  main_handlers.py  media.py  payment.py
src/bot/internal/: callbacks.py  commands.py  config_dicts.py  consts.py  dicts.py  enums.py  keyboards.py  lexicon.py  notify_admin.py  states.py
src/bot/middlewares/: auth.py  auth_middleware.py  logging.py  logging_middleware.py  session_middleware.py  updates_dumper.py  user_limit.py
src/database/: database_connector.py  models.py
src/webapp/: deps.py  main.py  webhook.py
