[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_bot"
version = "0.1.0"
description = "bot with llm integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.18.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.38",
    "alembic>=1.14.1",
    "ruff>=0.9.9",
    "asyncpg>=0.30.0",
]

[project.scripts]
bot-run = "bot.main:run_main"

[tool.ruff]
line-length = 119
target-version = "py312"
